@@ -1,3 +1,11 @@
+TAG: entrezgeneload-5-1-2-1
+DATE: 02/27/2013
+STAFF: lec
+CHANGES: TR11195/OMIM
+1) loadFiles.csh: NCBI/mim2gene_medgen replaces OMIM/mim2gene
+(see mirror_ftp)
+2) human/annotations.py: OMIM query changes (see python for documentation)
+
 TAG: entrezgeneload-tr6519-BP
 DATE: 02/25/2013
 STAFF: dbm
